# Crous

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: main.rs
