[package]
name = "crous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.197", features = ["derive"] }
termion = "3.0.0"
toml = "0.8.10"
